feat(property): evolve media gallery
